--- a/mods/hud/changelog.txt
+++ b/mods/hud/changelog.txt
@@ -1,50 +1,72 @@
-0.2 Beta
---------
-- added support of custom config files
-- you can eat max. 50% more than before (although it isnt shown in hunger bar)
-- you get healed with 8 breads and more (in hunger bar) now
-- a bread (from farming) == 2 breads in hunger bar
+2.1.2
+-----
+- Fixed crash caused by animated nodes (reported by Krock)
+- Fixed "freezing" of empty slots (reported by kilbith)
 
-0.2.1 Beta
-----------
-- tweaked override of food
-- added support for food of dwares, moretrees and simple mobs
+2.1.1
+-----
+- Added itemcounting/wearout info
+- Added support for hud scaling
+- Fixed typo causing endless updating
+- Fixed image scaling of some textures (like glass)
+- Improved ItemWheel image
 
-0.2.2 Beta
-----------
-- added support for food of animalmaterials (mobf modpack),fishing
-
-0.2.3 Beta
-----------
-- added support for food of glooptest and bushes (commit by CheeseKeg)
-
-0.3 Beta
-----------
-- added fancy borders of hud inventory bar (only for screenheight <= 800)
-
-0.4 Beta
-----------
-- enabled drowning
-
-0.5 Beta
-----------
-- removed the fancy borders of hud inventory bar and moved to new native support
-- moved crosshair to native support too
-
-1.0
+2.1
 ---
-- hunger is reset after death
-- health and hunger bar is shown correct on all screen resolutions now
-- switched to changed native hotbar image support
-- fixed revival of player when drown
-- hunger bar is not shown anymore if hunger is disabled
-- hunger can be disabled by minetest.conf ("hud_hunger_enable = false")
+- Added "ItemWheel" (experimental)
+- Fixed disapperaring hunger bar (reported by poet-nohit)
 
-1.1
+2.0.1
+-----
+- Fix disappearing hotbar (reported by poet-nohit)
+- Fix unused global var
+- Added one more check to catch probably incorrect players
+
+2.0
 ---
-- added support for stu's 3darmor mod
-- restructured and cleaned up code
-- added support for poisen food (damages player, but does not kill)
+- Complete rewrite
+- Moved hunger into seperate mod
+- Added API
+- Switched License to LGPL 2.1
+
+=====   =====   =====
+-----   0-1.x   -----
+=====   =====   =====
+
+1.4.1
+-----
+- ###
+
+1.4
+---
+- New hunger mechanics/added experimental player-action based hunger
+- Better crosshair texture, switched to "new" default hand
+- Added support for farming redo mod, kpgmobs and jkmod
+
+1.3.3
+-----
+- Prevent crash with armor mod and missing player
+- Add support for ethereal mod (by TenPlus1)
+
+1.3.2
+-----
+- Fix dependecies (by Chris Beelby)
+- Add support for creatures mod
+- Add optional healing for food (by TenPlus1)
+
+1.3.1
+-----
+- Add compatibility for statbar scaling
+- Fix typo in depends.txt
+- Lower maintimer tick
+
+1.3
+---
+- New way hunger is saved (all old files in world dirctory can get deleted [e.g. hud_BlockMen_hunger])
+- Fixed healing (not while drowning, fix after death)
+- Add support for mods: seaplants[sea] and mobfcooking (by Xanthin)
+- Tweaked hand image
+- Player can die caus of starving now
 
 1.2
 ---
@@ -56,10 +78,50 @@
 - Add support for mods: fruit and mush45
 - New images for hotbar, smaller armor icons
 
-1.3
+1.1
 ---
-- New way hunger is saved (all old files in world dirctory can get deleted [e.g. hud_BlockMen_hunger])
-- Fixed healing (not while drowning, fix after death)
-- Add support for mods: seaplants[sea] and mobfcooking (by Xanthin)
-- Tweaked hand image
-- Player can die caus of starving now
+- added support for stu's 3darmor mod
+- restructured and cleaned up code
+- added support for poisen food (damages player, but does not kill)
+
+1.0
+---
+- hunger is reset after death
+- health and hunger bar is shown correct on all screen resolutions now
+- switched to changed native hotbar image support
+- fixed revival of player when drown
+- hunger bar is not shown anymore if hunger is disabled
+- hunger can be disabled by minetest.conf ("hud_hunger_enable = false")
+
+0.5 Beta
+----------
+- removed the fancy borders of hud inventory bar and moved to new native support
+- moved crosshair to native support too
+
+0.4 Beta
+----------
+- enabled drowning
+
+0.3 Beta
+----------
+- added fancy borders of hud inventory bar (only for screenheight <= 800)
+
+0.2.3 Beta
+----------
+- added support for food of glooptest and bushes (commit by CheeseKeg)
+
+0.2.2 Beta
+----------
+- added support for food of animalmaterials (mobf modpack),fishing
+
+0.2.1 Beta
+----------
+- tweaked override of food
+- added support for food of dwares, moretrees and simple mobs
+
+0.2 Beta
+--------
+- added support of custom config files
+- you can eat max. 50% more than before (although it isnt shown in hunger bar)
+- you get healed with 8 breads and more (in hunger bar) now
+- a bread (from farming) == 2 breads in hunger bar
